Use URI instead of URL to parse Java WS URLs
AsyncHttpClient eventually passes the url to URI.create anyway, so this
means that NingWSRequestHolder will fail in a manner consistent with
AsyncHttpClient.

The specific use case that this has been done to address is allowing
WebSocket URLs, which URI.create is fine with, but new URL throws an
exception.